--- a/index.html
+++ b/index.html
@@ -1,10 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+  <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-16486034-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-16486034-1');
+    </script>
 
-</body>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Dimitris Nicoloutsopoulos">
+    <meta name="author" content="Dimitris Nicoloutsopoulos">
+    <link rel="icon" href="./favicon.ico">
+
+    <title>Dimitris Nicoloutsopoulos</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="starter-template.css" rel="stylesheet">
+    <link href="jumbotron-narrow.css" rel="stylesheet">
+    <link href="custom-extras.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+	<!-- Main container -->
+    <div class="container">
+
+      <!-- Header -->
+  	  <div id="header">
+		<h1>Dimitris Nicoloutsopoulos</h1>
+		<!-- <p>Google</p> -->
+	  </div>
+
+      <!-- Navigation bar -->
+      <nav class="navbar navbar-default">
+        <div class="container">
+
+	      <!-- ||| button -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+
+          <!-- Navigation items -->
+          <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav"> <!-- pull-right -->
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="./publications.html">Publications</a></li>
+              <li><a href="./talks.html">Talks</a></li>
+              <li><a href="./code.html">Code</a></li>
+              <li><a href="./about.html">About me</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </nav>
+
+      <!-- Content resides in 'row' elements with 'col' child elements -->
+      <div class="row" id="home">
+
+  	    <div class="col-md-12">
+	      <h3>Bayesian Inference and Data science</h3>
+
+<p>Some bio info...</p>
+<p> Next line </p>
+          <div class="horline" style="margin-top:40px; margin-bottom:25px;"></div>
+
+		  <h3>Header 3</h3>
+  		  <ul>
+
+		    <li class="narrow">
+		      <b>Transcriptomics viewer</b><br/>
+			  <u>D. Nicoloutsopoulos</u> UCL <br/>
+		 	  <a class="muted" href="https://acycliq.github.io/issplus/" target="_blank">Online data</a> &nbsp;
+			  <a class="muted" href="https://github.com/acycliq/issplus" target="_blank">GitHub repository</a> &nbsp;
+			</li>
+          </ul>
+
+		  <p style="margin-top:20px;">
+			<!--<a class="muted" href="publications.html">Show all publications<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>-->
+		  </p>
+
+          <div class="horline"></div>
+
+  	    </div><!-- /.col -->
+	  </div><!-- /.row -->
+    </div><!-- /.container -->
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="./bootstrap/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="./assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
 </html>
